--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,10 @@ h1 {
 }
 
 h2 {
+  color: white;
   size: 5em;
   text-align: center;
+  text-shadow: #020819 8px -20px 9px;
   text-transform: uppercase;
   line-height: 4em;
 }
@@ -61,4 +63,16 @@ ul {
   color: white;
   text-decoration: none;
   font-size: 2em;
+}
+
+.header {
+  background-image: url("https://s3-eu-west-1.amazonaws.com/ih-materials/uploads/ironhack-skydive-background.jpg");
+  background-position: 0 0;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 650px;
+}
+
+.quote {
+  font-size: 2.5em;
 }
